Game initialization logic